# morpho-vault-counterfactuals

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  streamlit_app.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  live-snapshot.yml  pages.yml  publish.yml
data/fixtures/: distressed_single_market_demo.json  steakhouse_usdc_snapshot_demo.json
docs/: demo_report.html  demo_report_distressed.html  index.html
live-data/: README.md  steakhouse_usdc_latest.html  steakhouse_usdc_latest.json  steakhouse_usdc_latest.md
live-data/history/: 2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  2026-06-28.json  (+24 more)
notebooks/: 01_demo.ipynb
src/mvcf/: __init__.py  __main__.py  detectors.py  diff.py  fetch.py  html_report.py  report.py  runner.py  state.py  synthetic.py
tests/: test_cli_and_report.py  test_detectors.py  test_diff_and_synthetic.py  test_fetch_and_models_strict.py  test_html_and_compare.py  test_positions.py  test_state.py  test_ux_and_robustness.py
