[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morpho-vault-counterfactuals"
version = "0.5.0"
description = "Historical replay + counterfactual stress testing for Morpho MetaMorpho vaults."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Max Gorbuk" }]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6",
  "mypy>=1.8",
  "pandas>=2.0",
  "matplotlib>=3.8",
]
streamlit = [
  "streamlit>=1.30",
  "pandas>=2.0",
]
notebook = [
  "jupyter>=1.0",
  "pandas>=2.0",
  "matplotlib>=3.8",
]

[project.scripts]
mvcf = "mvcf.__main__:main"

[project.urls]
Homepage = "https://github.com/mkzung/morpho-vault-counterfactuals"

[tool.hatch.build.targets.wheel]
packages = ["src/mvcf"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
disallow_untyped_defs = false   # gradual typing - set true once docstrings + tests caught up

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
